--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 html, body {
     width: 100%;
     height: auto;
+    overflow-x: hidden;
 }
 html {
     font-size: 62.5%;
